# Capstone_Project

./: README.md  pyproject.toml
capstone_project/: Analyzer.py  Classifier.py  Clustering.py  Regressor.py  TESTFUNCAnalyzer.py  TESTFUNCTION.py  class2.py  main.py  notes.ipynb  test.py
