[tool.poetry]
name = "capstone-project"
version = "0.1.0"
description = "Capstone project for ML and AI Bootcamp"
authors = ["Mivenya <amanda.d.dasilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.10.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
